# DPKP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: knapsackDP.cpp  knapsackDP.h
